# human-archive-ai

./: .claudeignore  .gitignore  README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
docs/: judgment-framework-architecture.md  judgment-framework-spec.md  market-analysis.md  marketing-strategy.md  persona-store-planning.md  review-report.md
legacy/: main.py  pyproject.toml
legacy/scripts/: setup.sh
legacy/src/human_archive/: config.py
legacy/src/human_archive/archive/: chunker.py  embedder.py  youtube.py
legacy/src/human_archive/auth/: api_key.py
legacy/src/human_archive/chat/: engine.py  retriever.py
legacy/src/human_archive/interview/: questions.py
legacy/src/human_archive/mcp/: server.py
legacy/src/human_archive/persona/: manager.py  prompt.py
mcp/: server.ts
src/__tests__/api/: chat-access.test.ts  consult-compare.test.ts  helpers.ts  interview-process.test.ts  invite-code.test.ts  persona-crud.test.ts  purchase-flow.test.ts  seller-dashboard.test.ts  store-compare.test.ts  store-register.test.ts  trial-limits.test.ts  well-known-mcp.test.ts
src/app/: layout.tsx  page.tsx
src/app/api/mcp/: route.ts
src/components/: ThemeToggle.tsx  disclaimer.tsx  nav.tsx  persona-card.tsx  store-card.tsx  trial-chat.tsx
src/lib/: api-key.ts  chunker.ts  deep-interview.ts  embedding.ts  framework-loader.ts  gemini-pool.ts  interview-phases.ts  judgment-extractor.ts  llm.ts  prompt.ts  retriever.ts  store-constants.ts  toss.ts
src/types/: index.ts
supabase/migrations/: 001_initial.sql  002_store.sql  003_judgment_framework.sql
(+67 files in other folders)
